--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,7 +7,15 @@
 <h:head>
 </h:head>
 <h:body>
-	<h1>Hello World!</h1>
-	<p:spinner size="5" label="huhu" />
+	<h1 style="position: absolute; top: 35px; left: 240px">Hello
+		World!</h1>
+	<div style="position: absolute; top: 95px; left: 240px">
+		<p:panelGrid border="1" columns="2" cellpadding="5" >
+			<p:outputLabel for="textId1" value="#{msg['hello']}:" />
+			<p:inputText id="textId1" size="5" required="true"/>
+			<p:outputLabel for="spinnerId2" value="Standard Label:" />
+			<p:spinner id="spinnerId2" size="5" required="true"/>
+		</p:panelGrid>
+	</div>
 </h:body>
 </html>
